# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  Objets.json  RT  author  crazy.json  disraption.json  disruption.json  libui  limited.json  moretexture.json  neg.json  parser.c  ref&trans.json  scene.json  ster_blue.json  ster_green.json  ster_red.json  texture.json  tor.json  р435о457л
RayTracer/: Makefile  author  rtv1
RayTracer/cl/: render.cl
RayTracer/incs/: ft_opencl_func.h  ft_types.h  ftui.h  get_next_line.h  libft.h  objects.h  parser.h  ray_rander_cl.h  ray_render.h  vector.h
RayTracer/srcs/: effects.c  ft_opencl_params.c  get_next_line.c  len_obj_2.c  light_3.c  main.c  parser.c  parser_logic.c  parser_utils.c  raymarching.c  vec_mul_2.c  vec_sum.c  vector.c
cl/: render.cl
incs/: cl_objects_converter.h  converter.h  effects.h  ft_opencl_func.h  ft_types.h  ftui.h  get_next_line.h  libft.h  light.h  objects.h  objects1.h  objects_cl.h  parser.h  perlin_noise.h  quat.h  ray_rander_cl.h  ray_render.h  raymarching.h  vector.h
incs/libui/: ft_control.h  ft_events.h  ft_point.h  ft_window.h
libs/: libSDL2-2.0.dylib
libs/SDL2/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2.pc
libs/libft/: Makefile  author  ft_atoi.c  ft_atoibase.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpopback.c  ft_lstpopfront.c  ft_lstpushback.c  ft_lstpushfront.c  ft_lstreduce.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  (+33 more)
libs/libui/: Makefile  config.status~HEAD  ft_control.c  ft_control_destructors.c  ft_controlevent.c  (+18 more)
srcs/: add_func.c  antialiasing.c  cl_objects_converter.c  cl_vector_converter.c  converter.c  converter_2.c  converter_3.c  converter_4.c  converter_5.c  converter_6.c  converter_7.c  converter_extras.c  converter_intermediates.c  converter_objects.c  converter_primitives.c  converter_utils.c  effects.c  file  ft_opencl_files.c  ft_opencl_func.c  ft_opencl_getters.c  ft_opencl_params.c  get_next_line.c  get_next_line.h  len_advanced.c  len_box.c  len_box_fract.c  len_capsule.c  len_cone.c  len_cylinder.c  len_ellipsoid.c  len_hexagonal_prism.c  len_mandelbub.c  len_obj.c  len_obj_2.c  len_obj_3.c  len_obj_4.c  len_octahedron.c  len_plane.c  len_primitives.c  (+35 more)
(+101 files in other folders)
